# Cleaning_robot

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robotic_arms_control/share/robotic_arms_control/: package.sh  package.xml
install/robotic_arms_control/share/robotic_arms_control/launch/: gazebo_bringup_ur5.launch.py
install/robotic_arms_control/share/robotic_arms_control/urdf/: ur5.urdf
log/: latest_build
src/robotic_arms_control/: CMakeLists.txt  setup.py
